Fix Role Rules filter bar layout bug
I overlooked this instance of the filter bar in #2278.

--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -15,6 +15,12 @@
   }
 }
 
+.co-m-pane__filter-bar--alt {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+}
+
 .co-m-pane__filter-bar-group {
   display: flex;
   flex: 1 1 auto;
